# codex-sdk-python

./: .gitignore  README.ja.md  README.md  pyproject.toml
codex_sdk/: __init__.py  codex.py  codex_options.py  events.py  exec.py  items.py  output_schema_file.py  thread.py  thread_options.py  turn_options.py
docs/: codex-vs-claude-sdk-comparison.md  typescript-python-comparison.md
examples/: basic_streaming.py  image_input.py  structured_output.py  structured_output_pydantic.py
